2006-07-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/window.glade: Added scrollWindows to Filters and actions
	in EditObserverDialog. 

2006-07-10  Adam Jocksch  <ajocksch@redhat.com>

	* memory/MemoryWindow.java (reverse): Ported endianess fix from
	RegisterWindow.java.

	* register/RegisterWindow.java (reverse): Renamed to switchEndianess,
	now correctly switches the byte order and not the bit order.

2006-07-07  Adam Jocksch  <ajocksch@redhat.com>

	* register/RegisterWindow.java (setTask): Now uses a seperate column to
	enable right-justification.

	* register/RegisterWindow.java (setTask): Now sets right alignment on
	data columns.

	* Gui.java (Gui): Now keeps track of the proper directory for the glade
	files and no longer initializes the register window through the
	WindowManager.
	* register/RegisterWindow.java (gladePath): Added.
	(load): Now refreshes the list after preferences have been loaded.

2006-07-07  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionManagerGui.java (getDebugSingleProcess): Only launch source window
	on OK response.

2006-07-07  Nurdin Premji  <npremji@redhat.com>

	* glade/procpop.glade: Made main log window and process/task tree resizable.

2006-07-06  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java: Apply GNU Format.
	(setEditSessionMode): Set default message.
	(setInitialName): Added.
	
	* druid/CreateFryskSessionDruid.java (getProcessSelectionControls):
	Make Info message dual purpose. Allow setting of markup.
	Allow setting of text. Allow icon change.
	* glade/frysk_create_session.glade: Remove old warning error message.
	Fix labels to be non-temporal and in-line with review.
	
	* glade/frysk_session_manager.glade: Remove Window hint Dialog.

	* SessionManagerGui.java : Apply GNU Format.
	(toggleControls): Fix button sensitivity modes.
	(setButtonStates): Ditto.

2006-07-05  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryFormatDialog.java (save): Corrected preferences saving
	error.