@@ -1,3 +1,8 @@
+2006-07-11  Mike Cvet  <mcvet@redhat.com>
+
+	* register/RegisterWindow.java (switchEndianness): refactored, and
+	fixed an array bounds bug.
+
 2006-07-10  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* glade/window.glade: Added scrollWindows to Filters and actions
